added skills page

--- a/achievements.html
+++ b/achievements.html
@@ -6,15 +6,15 @@
     </head>
     <body>
         <nav>
-            <li class="navpages logo"><a href='home.html'>Vanessa</a></li>
+            <li class="navpages logo"><a href='index.html'>Vanessa</a></li>
             <li class="navpages"><a href='interests.html'>Interests</a></li>
             <li class="navpages"><a href='volunteering.html'>Volunteering</a></li>
             <li class="navpages"><a href='achievements.html'>Achievements</a></li>
-            <li class="navpages"><a href='home.html'>Home</a></li>
+            <li class="navpages"><a href='index.html'>Home</a></li>
         </nav>
         <div class='achieve'>
             <li>Top 10 Finalist in the <a class='achievelinks' href="https://ssc.hkust.edu.hk/student-paper-competition-voting-2021">
-                2021 HKUST Sustainable Smart Campus Student Paper Competition</a></li>
+                2021 HKUST Sustainable Smart Campus Student Paper Competition (Innovative Solution category)</a></li>
             <li>1<sup>st</sup> place in the <a class='achievelinks' href="https://whatsticker.online/p/442710mQHNODg/HK/zh">
                 2021 HKUST WhatsApp Stickers Competition</a></li>
             <li>Obtained 6 out of 7 in IBDP Design Technology (High Level)</li>
