--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <nav>
             <li class="navpages logo"><a href='index.html'>Vanessa</a></li>
+            <li class="navpages"><a href='skills.html'>Skills</a></li>
             <li class="navpages"><a href='interests.html'>Interests</a></li>
             <li class="navpages"><a href='volunteering.html'>Volunteering</a></li>
             <li class="navpages"><a href='achievements.html'>Achievements</a></li>
