--- a/interests.html
+++ b/interests.html
@@ -6,11 +6,12 @@
     </head>
     <body>
         <nav>
-            <li class="navpages logo"><a href='home.html'>Vanessa</a></li>
+            <li class="navpages logo"><a href='index.html'>Vanessa</a></li>
+            <li class="navpages"><a href='skills.html'>Skills</a></li>
             <li class="navpages"><a href='interests.html'>Interests</a></li>
             <li class="navpages"><a href='volunteering.html'>Volunteering</a></li>
             <li class="navpages"><a href='achievements.html'>Achievements</a></li>
-            <li class="navpages"><a href='home.html'>Home</a></li>
+            <li class="navpages"><a href='index.html'>Home</a></li>
         </nav>
         <div class='interests'>
         
