--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li class="navpages"><a href='achievements.html'>Achievements</a></li>
             <li class="navpages"><a href='index.html'>Home</a></li>
         </nav>
+        <div class="all">
         <div class="container">
         <img src="sticker.png" alt="sticker" class="image">
         <div class="overlay" style="background-color: #87c8bd">
@@ -23,7 +24,7 @@
         <div class="container">
         <img src="cadcam.png" alt="cad_model" class="image">
         <div class="overlay" style="background-color: #c5bb58">
-        <div class="text">Computer-aided design/manufacturing</div>
+        <div class="text">CAD/CAM</div>
         </div>
         </div>
         
@@ -73,7 +74,7 @@
         <div class="container">
         <img src="wireframe.png" alt="wireframe" class="image">
         <div class="overlay" style="background-color: darkgrey">
-        <div class="text">Wireframing/mockups</div>
+        <div class="text">Wireframing and mockups</div>
         </div>
         </div>
   
@@ -81,6 +82,7 @@
         <img src="sewing.JPG" alt="sewing" class="image">
         <div class="overlay" style="background-color: #bf8697">
         <div class="text">Basic sewing</div>
+        </div>
         </div>
         </div>
     </body>
