added footer - experimental and may remove

--- a/volunteering.html
+++ b/volunteering.html
@@ -24,4 +24,7 @@
             <img src="intramural.jpg">
         </div>
     </body>
+    <footer style="position: relative; border-top: 1px solid white; min-height: 100%">
+        <h5>Please do not clone, copy or modify any part of my code and website design. Thanks.</h5>
+    </footer>
 </html>
