--- a/achievements.html
+++ b/achievements.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <title>Vanessa - Achievements</title>
-    <link rel="stylesheet" href='achievements.css'>
-    </head>
-    <body>
-        <nav>
-            <li class="navpages logo"><a href='index.html'>Vanessa</a></li>
-            <li class="navpages"><a href='skills.html'>Skills</a></li>
-            <li class="navpages"><a href='interests.html'>Interests</a></li>
-            <li class="navpages"><a href='volunteering.html'>Volunteering</a></li>
-            <li class="navpages"><a href='achievements.html'>Achievements</a></li>
-            <li class="navpages"><a href='index.html'>Home</a></li>
-        </nav>
-        <div class='achieve'>
-            <li>Top 10 Finalist in the <a class='achievelinks' href="https://ssc.hkust.edu.hk/student-paper-competition-voting-2021">
-                2021 HKUST Sustainable Smart Campus Student Paper Competition (Innovative Solution category)</a></li>
-            <li>1<sup>st</sup> place in the <a class='achievelinks' href="https://whatsticker.online/p/442710mQHNODg/HK/zh">
-                2021 HKUST WhatsApp Stickers Competition</a></li>
-            <li>Obtained 6 out of 7 in IBDP Design Technology (High Level)</li>
-            <li>Won Rookie All Stars in Australian Regional and competed in 2016 FIRST Robotics World Championship<a class='achievelinks' href="http://careerswithstem.com.au/first-robotics-warriors/">
-                with team</a></li>
-            <li>Achieved a perfect score in 2015 NCSS Python Challenge (Beginners)</li>
-            <img src="stickercomp.PNG">
-            <img src="sticker2.PNG">
-            <img src="frc.png">
-        </div>
-    </body>
+    <link rel="stylesheet" href="achievements.css" />
+  </head>
+  <body>
+    <nav>
+      <li class="navpages logo"><a href="index.html">Vanessa</a></li>
+      <li class="navpages"><a href="skills.html">Skills</a></li>
+      <li class="navpages"><a href="interests.html">Interests</a></li>
+      <li class="navpages"><a href="volunteering.html">Volunteering</a></li>
+      <li class="navpages"><a href="achievements.html">Achievements</a></li>
+      <li class="navpages"><a href="index.html">Home</a></li>
+    </nav>
+    <h5 style="text-align: none">
+      Please do not use, clone, copy or modify any element or design from this
+      website for your own purposes. Thanks!
+    </h5>
+    <div class="achieve">
+      <li>
+        Top 10 Finalist in the
+        <a
+          class="achievelinks"
+          href="https://ssc.hkust.edu.hk/student-paper-competition-voting-2021"
+        >
+          2021 HKUST Sustainable Smart Campus Student Paper Competition
+          (Innovative Solution category)</a
+        >
+      </li>
+      <li>
+        1<sup>st</sup> place in the
+        <a
+          class="achievelinks"
+          href="https://whatsticker.online/p/442710mQHNODg/HK/zh"
+        >
+          2021 HKUST WhatsApp Stickers Competition</a
+        >
+      </li>
+      <li>Obtained HKUST Admissions Scholarship for IB Diploma Holders</li>
+      <li>Achieved 6 out of 7 in IBDP Design Technology (High Level)</li>
+      <li>AISHK 2018 Distinguished Achiever</li>
+      <li>
+        Won Rookie All Stars in Australian Regional and competed in 2016 FIRST
+        Robotics World Championship<a
+          class="achievelinks"
+          href="http://careerswithstem.com.au/first-robotics-warriors/"
+        >
+          with team</a
+        >
+      </li>
+      <li>
+        Achieved a perfect score in 2015 NCSS Python Challenge (Beginners)
+      </li>
+      <img src="stickercomp.PNG" />
+      <img src="sticker2.PNG" />
+      <img src="frc.png" />
+    </div>
+  </body>
 </html>
-    
