--- a/volunteering.html
+++ b/volunteering.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head>
     <title>Vanessa - Volunteering</title>
-    <link rel="stylesheet" href='volunteering.css'>
-    </head>
-    <body>
-        <nav>
-            <li class="navpages logo"><a href='index.html'>Vanessa</a></li>
-            <li class="navpages"><a href='skills.html'>Skills</a></li>
-            <li class="navpages"><a href='interests.html'>Interests</a></li>
-            <li class="navpages"><a href='volunteering.html'>Volunteering</a></li>
-            <li class="navpages"><a href='achievements.html'>Achievements</a></li>
-            <li class="navpages"><a href='index.html'>Home</a></li>
-        </nav>
-        <div class='achieve'>
-            <li>Assisted in Food Angel</li>
-            <li>Assisted in Bread Run and other programs through school volunteering club</li>
-            <li>Participated in Soup of Love through HKUST Connect</li>
-            <li>Helped record heat results in Excel spreadsheets during the HKUST Intramural Aquatic Meet</li>
-            <li>Helped monitor livestream of event during 2015 FIRST Tech Challenge at Macquarie University</li>
-            <img src="klb1.jpg">
-            <img src="klb2.png">
-            <img src="intramural.jpg">
-        </div>
-    </body>
+    <link rel="stylesheet" href="volunteering.css" />
+  </head>
+  <body>
+    <nav>
+      <li class="navpages logo"><a href="index.html">Vanessa</a></li>
+      <li class="navpages"><a href="skills.html">Skills</a></li>
+      <li class="navpages"><a href="interests.html">Interests</a></li>
+      <li class="navpages"><a href="volunteering.html">Volunteering</a></li>
+      <li class="navpages"><a href="achievements.html">Achievements</a></li>
+      <li class="navpages"><a href="index.html">Home</a></li>
+    </nav>
+    <h5 style="text-align: none">
+      Please do not use, clone, copy or modify any element or design from this
+      website for your own purposes. Thanks!
+    </h5>
+    <div class="achieve">
+      <li>Assisted in Food Angel</li>
+      <li>
+        Assisted in Bread Run and other programs through school volunteering
+        club
+      </li>
+      <li>Participated in Soup of Love through HKUST Connect</li>
+      <li>
+        Helped record heat results in Excel spreadsheets during the HKUST
+        Intramural Aquatic Meet
+      </li>
+      <li>
+        Helped monitor livestream of event during 2015 FIRST Tech Challenge at
+        Macquarie University
+      </li>
+      <img src="klb1.jpg" />
+      <img src="klb2.png" />
+      <img src="intramural.jpg" />
+    </div>
+  </body>
 </html>
